--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,24 @@ sudo: false
 
 language: python
 
+env:
+  - DJANGO_VERSION=1.8.7
+  - DJANGO_VERSION=1.8.8
+  - DJANGO_VERSION=1.9
+  
 python:
-  - 2.7
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  # does not have headers provided, please ask https://launchpad.net/~pypy/+archive/ppa
+  # maintainers to fix their pypy-dev package.
+  - "pypy"
 
-install:
+ install:
+  - pip install .
+  - pip install -r requirements.txt
   - pip install codecov
 
 script:
