--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ python:
   - "pypy"
 
 install:
-  - pip install .
-  - pip install -r requirements.txt
+  - python setup.py install
   - pip install codecov
 
 script:
