--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ before_install:
 install:
   - python setup.py install
 script:
-  - coverage run manage.py jenkins --enable-coverage
+  - coverage run manage.py jenkins --enable-coverage -v 2
 after_success:
   - codecov
