- update mail - update gitignore - update travis-ci - add MIDDLEWARE for django 2.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,24 @@
 sudo: false
 
 language: python
-
+matrix:
+  allow_failures:
+    - os: osx
+    - env: DJANGO_VERSION=3.0.2
+os:
+  - linux
+  - osx
 env:
-  - DJANGO_VERSION=1.8.7
-  - DJANGO_VERSION=1.8.8
-  - DJANGO_VERSION=1.9
-  
+  - DJANGO_VERSION=2.2.9
+  - DJANGO_VERSION=3.0.2
 python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  # does not have headers provided, please ask https://launchpad.net/~pypy/+archive/ppa
-  # maintainers to fix their pypy-dev package.
-  - "pypy"
-
+  - "3.6"
+  - "3.7"
+  - "3.8"
 install:
   - python setup.py install
   - pip install codecov
-
 script:
   - coverage run manage.py test --exe --all-modules
-
 after_success:
   - codecov
