--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
   rev: 5.10.1
   hooks:
   - id: isort
+    args: ["--profile", "black"]
 - repo: https://github.com/PyCQA/flake8
   rev: 4.0.1
   hooks:
@@ -38,8 +39,3 @@ repos:
     - flake8-comprehensions
     - flake8-tidy-imports
     - flake8-typing-imports
-- repo: https://github.com/mgedmin/check-manifest
-  rev: "0.47"
-  hooks:
-  - id: check-manifest
-    args: [--no-build-isolation]
