- fix setup config

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,8 @@ classifiers =
 
 
 [options]
+package_dir=
+    =example
 setup_requires = Django>=2.2
 packages = find:
 include_package_data = True
