- test vercel-python-wsgi

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "builds": [
     {
       "src": "example/wsgi.py",
-      "use": "@vercel/python"
+      "use": "@ardnt/vercel-python-wsgi",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.10"  }
     }
   ],
   "routes": [
